<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#292b4d"
        android:orientation="horizontal">

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAddGeofence"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_marginStart="228dp"
        android:layout_marginLeft="228dp"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        android:layout_marginBottom="76dp"
        android:textColor="#ffffff"
        android:background="#787cba"
        android:text="@string/btnAddGeofence"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:background="#787cba"
        android:id="@+id/btnViewGeofence"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_marginStart="228dp"
        android:layout_marginLeft="228dp"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        android:layout_marginBottom="208dp"
        android:textColor="#ffffff"

        android:text="@string/btnViewGeofence"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnViewMap"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginEnd="216dp"
        android:layout_marginRight="216dp"
        android:layout_marginBottom="208dp"
        android:textColor="#ffffff"
        android:background="#787cba"
        android:text="@string/btnViewMap"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnExit"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginEnd="216dp"
        android:layout_marginRight="216dp"
        android:layout_marginBottom="76dp"
        android:textColor="#ffffff"
        android:background="#787cba"
        android:text="@string/btnExit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="275dp"
        android:layout_height="220dp"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:layout_marginEnd="68dp"
        android:layout_marginRight="68dp"
        android:layout_marginBottom="84dp"
        android:background="#787cba"
        app:layout_constraintBottom_toTopOf="@+id/btnViewGeofence"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_lock_silent_mode" />

</androidx.constraintlayout.widget.ConstraintLayout>